--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </main>
     <footer>
         <p>
-            Site criado por <a class=footer href="https://gustavoguanabara.github.io/" target="_blank" >Gustavo Guanabara</a> para o Curso Em Vídeo.
+            Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank" >Gustavo Guanabara</a> para o Curso Em Vídeo.
         </p>
     </footer>
 </body>
